--- a/src/routes/store/store.css
+++ b/src/routes/store/store.css
@@ -1,7 +1,7 @@
 /* Store Page Layout */
 .store-header {
   margin-bottom: 2rem;
-  text-align: right;
+  text-align: left;
   padding-right: 1rem;
 }
 
@@ -374,3 +374,23 @@
   text-align: center;
   padding: 2rem 0;
 } 
+
+.brontosaurus-page-container {
+  background-color: #242424;
+  color: seagreen;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  flex: 1;
+  padding: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.brontosaurus-page-title {
+  font-size: 22px;
+  font-weight: normal;
+  color: seagreen;
+  margin-bottom: 1rem;
+}
