--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,22 +19,21 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--background-color);
+  background-color: #242424;
 }
 
 /* Layout */
 .page-container {
   min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding-top: 4rem; /* Account for fixed navbar */
 }
 
 .main-content {
-  flex: 1;
+
   padding: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
   width: 100%;
 }
 
