--- a/src/routes/store/store.css
+++ b/src/routes/store/store.css
@@ -18,6 +18,7 @@
 
 .section-header {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   gap: 1.5rem;
   margin-bottom: 2rem;
@@ -38,10 +39,22 @@
 }
 
 .brontosaurus-page-title {
-  margin-top: 3rem;
+  margin-top: 10px;
+  margin-left: 10px;
   height: fit-content;
-  width: fit-content;
-  border: 2px dotted seagreen;
+  width: 42%;
+}
+
+.city-image {
+  margin: 10px;
+  width: 42%;
+ 
+}
+
+.image-container-heading {
+  display: inline-flex;
+  align-items: center;
+  margin-top: 5%;
 }
 
 .brontosaurus-page-nav {
