--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,20 +10,20 @@
 }
 
 .navbar-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0%;
+  padding-bottom: 1%;
+  border-bottom: 1px solid lightgreen;
 }
 
 .nav-links {
   display: flex;
   gap: 2rem;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style: none;
 }
 
 .nav-link {
@@ -42,13 +42,14 @@
 .nav-link:hover {
   background-color: rgb(157, 77, 68);
   color: #000;
-  transition: 20ms ease-in-out;
+  transition: 10ms ease-in-out;
 }
 
 .nav-link.active {
   transition: 10ms ease-in-out;
-  background-color: rgb(3, 45, 3);
+  background-color: rgb(38, 58, 31);
   color: lightgreen;
+  border: 1px solid lightgreen;
   text-transform: uppercase;
   font-family: courier;
 
